@startuml

title __SECTIONS's Class Diagram__\n

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class Cancel {
        }
      }
    }
  }
  

  class WrappedPrintWriter {
      - printWriter : PrintWriter
      ~ WrappedPrintWriter()
      ~ lock()
      ~ println()
  }
  

  class WrappedPrintStream {
      - printStream : PrintStream
      ~ WrappedPrintStream()
      ~ lock()
      ~ println()
  }
  

  abstract class PrintStreamOrWriter {
      - PrintStreamOrWriter()
      {abstract} ~ lock()
      {abstract} ~ println()
  }
  

  class SentinelHolder {
      {static} + STACK_TRACE_ELEMENT_SENTINEL : StackTraceElement
      {static} + STACK_TRACE_SENTINEL : StackTraceElement[]
      - SentinelHolder()
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class FormSection {
            - withCancel : Boolean
            - questions : List<String>
            - answers : List<String>
            + FormSection()
            + show()
            + hasAnswers()
            + getAnswer()
            - resetAnswers()
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class MenuSection {
            - selectionSection : SelectionSection<MethodCall>
            + MenuSection()
            + MenuSection()
            + addOption()
            + show()
            + executeChoice()
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        abstract class Section {
            {abstract} + show()
            ~ print()
            ~ println()
            ~ inputString()
            ~ inputAnswer()
            ~ inputValidAnswer()
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class SelectionSection {
            - withCancel : Boolean
            - cancelText : String
            - optionNames : List<String>
            - optionObjects : List<Type>
            - answer : Integer
            + SelectionSection()
            + SelectionSection()
            + addOption()
            + addOption()
            + addOptions()
            + addOptions()
            + addOptions()
            + show()
            + hasAnswer()
            + getAnswer()
            + getAnswerObject()
            + resetAnswer()
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class TextSection {
            - text : String
            - isBlocking : boolean
            + TextSection()
            + addLine()
            + show()
        }
      }
    }
  }
  

  package taskman {
    package taskman.frontend {
      package taskman.frontend.sections {
        class TitleSection {
            + TitleSection()
            - repeat()
            + show()
        }
      }
    }
  }
  

  Cancel +-down- WrappedPrintWriter
  Cancel +-down- WrappedPrintStream
  Cancel +-down- PrintStreamOrWriter
  Cancel +-down- SentinelHolder
  FormSection -up-|> Section
  MenuSection -up-|> Section
  SelectionSection -up-|> Section
  TextSection -up-|> Section
  TitleSection -up-|> Section
  TitleSection o-- TextSection : textSection


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
